[package]
name = "nom-kconfig"
version = "0.4.0"
edition = "2021"
authors = ["yann Prono"]
repository = "https://github.com/Mcdostone/nom-kconfig"
homepage = "https://github.com/Mcdostone/nom-kconfig"
license = "MIT"
readme = "README.md"
description = "A Kconfig parser"
categories = ["parsing"]
keywords = ["parser",  "parsing", "kconfig", "linux-kernel"]
rust-version = "1.56"
exclude = [
    ".github",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition"]


[workspace]
members = [
    "fuzzing",
]

[dependencies]
nom = "8.0.0"
nom_locate = "5.0.0"
regex = "1.11.2"
serde = { version = "1.0.219", features = ["derive"], optional = true }

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }
walkdir = "2.5.0"
reqwest = { version = "0.11", features = ["blocking"] }

[[bench]]
name = "my_benchmark"
harness = false

[features]
default = ["display", "hash", "serialize", "deserialize"]
display = []
hash = []
serialize = ["dep:serde"]
deserialize = ["dep:serde"]


[package.metadata.typos]
files.extend-exclude = [
    "benches/linux-6.4.10"
]


[workspace.metadata.release]
shared-version = true
tag-message = "chore: Release version v{{version}}"
pre-release-commit-message = "chore: Release version v{{version}}"
tag-name = "{{version}}"
