[package]
name = "nom-kconfig"
version = "0.10.0"
edition = "2021"
authors = ["yann Prono"]
repository = "https://github.com/Mcdostone/nom-kconfig"
homepage = "https://github.com/Mcdostone/nom-kconfig"
license = "MIT"
readme = "README.md"
description = "A Kconfig parser"
categories = ["parsing"]
keywords = ["parser",  "parsing", "kconfig", "linux-kernel"]
rust-version = "1.65"
exclude = [
    ".github",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition"]


[workspace]
members = [
    "fuzzing",
]

[dependencies]

glob = { version = "0.3.3", optional = true }
nom = "8.0.0"
nom_locate = "5.0.0"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"], optional = true }
tracing = { version = "0.1.44", features = ["log"] }

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
walkdir = "2.5.0"
reqwest = { version = "0.13.2", features = ["blocking"] }
tracing-subscriber = "0.3.23"
clap = { version = "4.3.24", features = ["derive"] }

[[bench]]
name = "my_benchmark"
harness = false

[features]
default = ["display", "hash", "serialize", "deserialize", "kconfiglib"]
coreboot = ["dep:glob", "named-choice"]
kconfiglib = ["dep:glob", "named-choice"]
named-choice = []
display = []
hash = []
serialize = ["dep:serde"]
deserialize = ["dep:serde"]

[package.metadata.typos]
files.extend-exclude = [
    "benches/linux-6.4.10"
]

[workspace.metadata.release]
shared-version = true
tag-message = "chore: Release version v{{version}}"
pre-release-commit-message = "chore: Release version v{{version}}"
tag-name = "{{version}}"
